--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
