--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "yarn --cwd src/mock run dev",
+    "client": "yarn run start",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +40,7 @@
     "clsx": "^1.0.4",
     "date-fns": "^2.9.0",
     "history": "^4.9.0",
+    "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -57,6 +61,7 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "eslint": "5.16.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
