Add jira tickets sagas

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "yarn --cwd src/mock run dev",
+    "server": "yarn --cwd mock run dev",
     "client": "yarn run start",
     "dev": "concurrently \"yarn run server\" \"yarn run client\""
   },
