--- a/mock/package.json
+++ b/mock/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "uuidv4": "^6.0.2"
   },
   "devDependencies": {
