--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "date-fns": "^2.9.0",
+    "google-palette": "^1.1.0",
     "history": "^4.9.0",
     "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
